[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://GFX/Player.png" type="Texture" id=2]
[ext_resource path="res://Sound/shoot.wav" type="AudioStream" id=3]
[ext_resource path="res://Sound/explosion.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.57956, 2.00795 )

[node name="Player" type="Area2D"]
collision_mask = 24
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.049 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.5, 0 )
texture = ExtResource( 2 )

[node name="Shoot_Delay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="Shoot_Delay" to="." method="_on_Shoot_Delay_timeout"]
